병원소개 업로드

--- a/www/resource/css/fonts.css
+++ b/www/resource/css/fonts.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&display=swap');
 @font-face {
     font-family: 'NEXON Lv2 Gothic';
     src: url('../fonts/NEXON Lv2 Gothic Medium.ttf') format('truetype'),
