--- a/www/resource/css/style.css
+++ b/www/resource/css/style.css
@@ -10,15 +10,12 @@
   color: #333 !important; }
 
 /* 공통요소 */
-<<<<<<< HEAD
-=======
 .mb-show {
   display: none !important; }
 
 .mb-hide {
   display: block !important; }
 
->>>>>>> 8a52006d0a5cc61a01ae044ed7c091d3e89b7c0d
 .inner {
   width: 100%;
   max-width: 1330px;
@@ -1136,7 +1133,7 @@ footer {
   .simbol-tit.text-left {
     text-align: left; }
 
-p.help-tit {
+.help-tit {
   margin-bottom: 50px;
   font-size: 20px;
   font-weight: normal;
@@ -1144,6 +1141,18 @@ p.help-tit {
   letter-spacing: -1px;
   text-align: center;
   color: #333; }
+  .help-tit.middot {
+    font-size: 32px;
+    font-weight: 500; }
+    .help-tit.middot:after, .help-tit.middot:before {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      margin: 0 10px;
+      border-radius: 100%;
+      background-color: #2f65bd;
+      vertical-align: middle;
+      content: ''; }
 
 .simbol-tit + .help-tit {
   margin-top: -20px; }
@@ -1419,8 +1428,6 @@ p.help-tit {
           text-align: center;
           color: #fff; }
 
-<<<<<<< HEAD
-=======
 /* 로그인 */
 #member-box {
   max-width: 800px;
@@ -1464,6 +1471,253 @@ p.help-tit {
         border-color: #F7E600;
         background-color: #F7E600; }
 
+/* 의료진 소개 */
+.doc-box {
+  margin-bottom: 10rem; }
+  .doc-box .doc {
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; }
+    .doc-box .doc .text {
+      width: 50%;
+      padding: 0 5rem; }
+      .doc-box .doc .text span {
+        display: block;
+        margin-bottom: 15px;
+        font-size: 20px;
+        line-height: 1;
+        letter-spacing: -1px;
+        color: #333333; }
+      .doc-box .doc .text h3 {
+        margin-bottom: 45px;
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 1.3;
+        letter-spacing: -1px;
+        color: #333333;
+        word-break: keep-all; }
+      .doc-box .doc .text p {
+        font-size: 20px;
+        line-height: 1.6;
+        letter-spacing: -1px;
+        color: #333333;
+        word-break: keep-all; }
+
+.doc-box .his {
+  margin-top: 80px; }
+
+.doc-box .his .his-tab {
+  display: flex;
+  border-bottom: 1px solid #c2c2c2; }
+
+.doc-box .his .his-tab li a {
+  display: block;
+  width: 207px;
+  margin-bottom: -1px;
+  margin-left: -1px;
+  font-family: 'Noto Sans KR';
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 56px;
+  letter-spacing: -0.55px;
+  text-align: center;
+  color: #333;
+  border: 1px solid #c2c2c2;
+  background-color: #fff; }
+
+.doc-box .his .his-tab li.active a {
+  color: #fff;
+  border: 1px solid #2f65bd;
+  box-sizing: border-box;
+  background-color: #2f65bd; }
+
+.doc-box .his [class*="tab-"] {
+  display: none;
+  padding: 40px;
+  font-family: 'Noto Sans KR';
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: -1.5px;
+  color: #333333; }
+
+.doc-box .his [class*="tab-"].on {
+  display: block; }
+
+.intro-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+  .intro-info .use-box {
+    width: 50%;
+    padding: 70px 100px;
+    text-align: center;
+    box-sizing: border-box;
+    background-color: #2f65bd; }
+    .intro-info .use-box > span {
+      display: inline-block;
+      margin-bottom: 20px;
+      padding: 5px 15px 2px;
+      color: #2f65bd;
+      font-size: 20px;
+      font-weight: 500;
+      letter-spacing: -1px;
+      border-radius: 20px;
+      background-color: #fff; }
+    .intro-info .use-box > h4 {
+      margin-bottom: 20px;
+      font-family: 'Barlow';
+      font-size: 68px;
+      font-weight: 600;
+      font-stretch: condensed;
+      line-height: 1;
+      letter-spacing: -2px;
+      color: #fff; }
+    .intro-info .use-box > p {
+      font-size: 20px;
+      font-weight: normal;
+      line-height: 1.4;
+      color: #fff; }
+    .intro-info .use-box .line-box {
+      width: 396px;
+      margin: 30px auto;
+      padding: 20px 0;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff; }
+      .intro-info .use-box .line-box table {
+        width: 70%;
+        margin: 0 auto; }
+        .intro-info .use-box .line-box table * {
+          padding: 5px;
+          color: #fff;
+          font-size: 18px;
+          text-align: left; }
+        .intro-info .use-box .line-box table caption {
+          font-size: 35px;
+          font-weight: bold;
+          line-height: 1.4;
+          letter-spacing: -1.75px;
+          text-align: center; }
+        .intro-info .use-box .line-box table th {
+          width: 80px;
+          font-weight: 300; }
+        .intro-info .use-box .line-box table td {
+          font-weight: 600; }
+
+/* 오시는길 */
+#map .root_daum_roughmap {
+  width: 100%; }
+
+.btnWrap {
+  display: flex;
+  width: 100%;
+  text-align: center; }
+  .btnWrap > span {
+    width: 100%; }
+  .btnWrap [class*="btnType"] {
+    display: inline-block;
+    width: 100%;
+    padding: 15px 0;
+    font-size: 20px;
+    font-weight: 500; }
+  .btnWrap [class*="btnType"] ~ [class*="btnType"] {
+    margin-top: 2rem; }
+
+.btnWrap + .btnWrap {
+  margin-top: 1.5rem; }
+
+.btnTypeNaver {
+  background: #1dc800;
+  color: #fff; }
+  .btnTypeNaver:before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 25px;
+    margin: -2px 10px 0;
+    background: url("/resource/images/n.png") no-repeat;
+    vertical-align: middle; }
+
+.btnTypeKakao {
+  background: #ffe400;
+  color: #412e34 !important; }
+  .btnTypeKakao:before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 25px;
+    margin: -2px 10px 0;
+    background: url("/resource/images/k.png") no-repeat;
+    vertical-align: middle; }
+
+.map-addr {
+  display: flex;
+  margin: 5.8rem 0 8rem;
+  font-family: 'Noto Sans KR'; }
+  .map-addr > div {
+    display: flex;
+    align-items: center;
+    width: 50%; }
+    .map-addr > div img {
+      margin-right: 20px; }
+    .map-addr > div span {
+      font-size: 20px;
+      font-weight: 300;
+      line-height: 1.6;
+      letter-spacing: -1.88px;
+      color: #333333;
+      vertical-align: middle; }
+      .map-addr > div span small {
+        display: inline-block;
+        width: 80px;
+        color: #333;
+        font-size: 20px;
+        font-weight: 500; }
+      .map-addr > div span b {
+        font-weight: 500; }
+
+.cont-box {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  margin-bottom: 40px;
+  padding: 40px 0;
+  box-sizing: border-box; }
+  .cont-box:before {
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #dadada;
+    content: ''; }
+  .cont-box:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 170px;
+    height: 3px;
+    background-color: #2f65bd;
+    content: ''; }
+  .cont-box .cont-label {
+    flex-shrink: 0;
+    width: 220px;
+    padding-left: 15px;
+    color: #333333;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.4;
+    letter-spacing: -1.25px; }
+  .cont-box .cont {
+    width: 100%; }
+    .cont-box .cont > p {
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 1.6; }
+  .cont-box.no-after:after {
+    display: none; }
+
 @media screen and (max-width: 768px) {
   /* show-hide */
   .mb-show {
@@ -1472,5 +1726,4 @@ p.help-tit {
   .mb-hide {
     display: none !important; } }
 
->>>>>>> 8a52006d0a5cc61a01ae044ed7c091d3e89b7c0d
 /*# sourceMappingURL=style.css.map */
