--- a/www/resource/css/style.scss
+++ b/www/resource/css/style.scss
@@ -1455,7 +1455,7 @@ footer {
 		text-align: left;
 	}
 }
-p.help-tit {
+.help-tit {
 	margin-bottom: 50px;
 	font-size: 20px;
 	font-weight: normal;
@@ -1463,6 +1463,21 @@ p.help-tit {
 	letter-spacing: -1px;
 	text-align: center;
 	color: #333;
+	&.middot {
+		font-size: 32px;
+		font-weight: 500;
+		&:after,
+		&:before {
+			display: inline-block;
+			width: 16px;
+			height: 16px;
+			margin:0 10px;
+			border-radius: 100%;
+			background-color: #2f65bd;
+			vertical-align: middle;
+			content:'';
+		}
+	}
 }
 
 .simbol-tit + .help-tit {
@@ -1840,6 +1855,290 @@ p.help-tit {
 		}
 	}
 }//end #member-box
+
+/* 의료진 소개 */
+.doc-box {
+	margin-bottom: 10rem;
+	.doc {
+		overflow: hidden;
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+		.text {
+			width: 50%;
+			padding:0 5rem;
+			span {
+				display: block;
+				margin-bottom: 15px;
+				font-size: 20px;
+				line-height: 1;
+				letter-spacing: -1px;
+				color: #333333;
+			}
+			h3 {
+				margin-bottom: 45px;
+				font-size: 30px;
+				font-weight: 500;
+				line-height: 1.3;
+				letter-spacing: -1px;
+				color: #333333;
+				word-break: keep-all;
+			}
+			p {
+				font-size: 20px;
+				line-height: 1.6;
+				letter-spacing: -1px;
+				color: #333333;
+				word-break: keep-all;
+			}
+		}//end .text
+	}//end .doc
+}//end .doc-box
+.doc-box .his {
+	margin-top: 80px;
+}
+.doc-box .his .his-tab {
+	display: flex;
+	border-bottom:1px solid #c2c2c2;
+}
+.doc-box .his .his-tab li a {
+	display: block;
+	width: 207px;
+	margin-bottom: -1px;
+	margin-left: -1px;
+	font-family: 'Noto Sans KR';
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 56px;
+	letter-spacing: -0.55px;
+	text-align: center;
+	color: #333;
+	border:1px solid #c2c2c2;
+	background-color: #fff;
+}
+.doc-box .his .his-tab li.active a {
+	color:#fff;
+	border:1px solid #2f65bd;
+	box-sizing: border-box;
+	background-color: #2f65bd;
+}
+.doc-box .his [class*="tab-"] {
+	display: none;
+	padding: 40px;
+	font-family: 'Noto Sans KR';
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 1.6;
+	letter-spacing: -1.5px;
+	color: #333333;
+}
+.doc-box .his [class*="tab-"].on {
+	display: block;
+}
+
+
+.intro-info {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	.use-box {
+		width: 50%;
+		padding:70px 100px;
+		text-align: center;
+		box-sizing: border-box;
+		background-color: #2f65bd;
+		> span {
+			display: inline-block;
+			margin-bottom: 20px;
+			padding:5px 15px 2px;
+			color:#2f65bd;
+			font-size: 20px;
+			font-weight: 500;
+			letter-spacing: -1px;
+			border-radius: 20px;
+			background-color: #fff;
+		}
+		> h4 {
+			margin-bottom: 20px;
+			font-family: 'Barlow';
+			font-size: 68px;
+			font-weight: 600;
+			font-stretch: condensed;
+			line-height: 1;
+			letter-spacing: -2px;
+			color: #fff;
+		}
+		> p {
+			font-size: 20px;
+			font-weight: normal;
+			line-height: 1.4;
+			color: #fff;
+		}
+		.line-box {
+			width: 396px;
+			margin:30px auto;
+			padding:20px 0;
+			border-top:1px solid #fff;
+			border-bottom:1px solid #fff;
+			table {
+				width: 70%;
+				margin:0 auto;
+				* {
+					padding:5px;
+					color:#fff;
+					font-size: 18px;
+					text-align: left;
+				}
+				caption {
+					font-size: 35px;
+					font-weight: bold;
+					line-height: 1.4;
+					letter-spacing: -1.75px;
+					text-align: center;
+				}
+				th {
+					width: 80px;
+					font-weight: 300;
+				}
+				td {
+					font-weight: 600;
+				}
+			}//end table
+		}//end .list-box
+	}//end .use-box
+}//end .intro-info
+
+/* 오시는길 */
+#map .root_daum_roughmap {
+	width: 100%;
+}//end #map
+.btnWrap {
+	display: flex;
+	width: 100%;
+	text-align: center;
+	>span {
+		width: 100%;
+	}
+	[class*="btnType"] {
+		display: inline-block;
+		width: 100%;
+		padding: 15px 0;
+		font-size: 20px;
+		font-weight: 500;
+	}
+		[class*="btnType"]~[class*="btnType"] {
+		margin-top: 2rem;
+	}
+}//end .btnWrap
+.btnWrap+.btnWrap {
+	margin-top: 1.5rem;
+}
+.btnTypeNaver {
+	background: #1dc800;
+	color: #fff;
+	&:before {
+		content: "";
+		display: inline-block;
+		width: 24px;
+		height: 25px;
+		margin: -2px 10px 0;
+		background: url("/resource/images/n.png") no-repeat;
+		vertical-align: middle;
+	}
+}//end .btnTypeNaver
+.btnTypeKakao {
+	background: #ffe400;
+	color: #412e34 !important;
+	&:before {
+		content: "";
+		display: inline-block;
+		width: 24px;
+		height: 25px;
+		margin: -2px 10px 0;
+		background: url("/resource/images/k.png") no-repeat;
+		vertical-align: middle;
+	}
+}//end .btnTypeKakao
+.map-addr {
+	display: flex;
+	margin: 5.8rem 0 8rem;
+	font-family: 'Noto Sans KR';
+	>div {
+		display: flex;
+		align-items: center;
+		width: 50%;
+		img {
+			margin-right: 20px;
+		}
+		span {
+			font-size: 20px;
+			font-weight: 300;
+			line-height: 1.6;
+			letter-spacing: -1.88px;
+			color: #333333;
+			vertical-align: middle;
+			small {
+				display: inline-block;
+				width: 80px;
+				color: #333;
+				font-size: 20px;
+				font-weight: 500;
+			}//end small
+			b {
+				font-weight: 500;
+			}//end b
+		}//end span
+	}//end div
+}//end .map-addr
+
+.cont-box {
+	overflow: hidden;
+	position: relative;
+	display: flex;
+	margin-bottom: 40px;
+	padding: 40px 0;
+	box-sizing: border-box;
+	&:before {
+		position: absolute;
+		top: 1px;
+		left: 0;
+		width: 100%;
+		height: 1px;
+		background-color: #dadada;
+		content: '';
+	}
+	&:after {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 170px;
+		height: 3px;
+		background-color: #2f65bd;
+		content: '';
+	}
+	.cont-label {
+		flex-shrink: 0;
+		width: 220px;
+		padding-left: 15px;
+		color: #333333;
+		font-size: 20px;
+		font-weight: 500;
+		line-height: 1.4;
+		letter-spacing: -1.25px;
+	}//end .cont-label
+	.cont {
+		width: 100%;
+		>p {
+			font-size: 20px;
+			font-weight: 400;
+			line-height: 1.6;
+		}
+	}//end .cont
+
+	&.no-after:after {
+		display: none;
+	}
+}//end .cont-box
 
 
 @media screen and (max-width:768px) {
