--- a/www/resource/css/style.css
+++ b/www/resource/css/style.css
@@ -77,6 +77,20 @@
   margin-left: -5px; }
   .flex-list-02.margin-t {
     margin-top: 50px; }
+  .flex-list-02.n4 {
+    width: calc(100% + 16px);
+    margin-left: -8px; }
+    .flex-list-02.n4 > div {
+      width: calc(25% - 16px);
+      margin: 0 8px 16px; }
+      .flex-list-02.n4 > div > p {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 3;
+        letter-spacing: -1px;
+        text-align: center;
+        color: #fff;
+        background-color: #b39b7d; }
   .flex-list-02 .left,
   .flex-list-02 .right {
     margin: 0 5px; }
