--- a/www/resource/css/style.scss
+++ b/www/resource/css/style.scss
@@ -98,6 +98,23 @@
 	&.margin-t {
 		margin-top: 50px;
 	}
+	&.n4 {
+		width: calc(100% + 16px);
+		margin-left: -8px;
+		>div {
+			width: calc(25% - 16px);
+			margin:0 8px 16px;
+			> p {
+				font-size: 20px;
+				font-weight: 500;
+				line-height: 3;
+				letter-spacing: -1px;
+				text-align: center;
+				color:#fff;
+				background-color: #b39b7d;
+			}
+		}
+	}
 	.left,
 	.right {
 		margin:0 5px;
