--- a/www/resource/css/style.scss
+++ b/www/resource/css/style.scss
@@ -44,6 +44,9 @@
 	&.bg-gray-gradation {
 		background: linear-gradient(to bottom, #f0f0f0 0, #f0f0f0 50%,#fff 50%, #fff 100%);
 	}
+	&.bg-gray-gradation2 {
+		background: linear-gradient(to bottom, #f0f0f0 0, #f0f0f0 80%,#fff 80%, #fff 100%);
+	}
 }
 
 .dott {
