--- a/www/resource/css/style.scss
+++ b/www/resource/css/style.scss
@@ -643,6 +643,56 @@
 
 
 
+/*
+	Ham botton
+*/
+.menu-button {
+	display: none;
+	position: relative;
+	padding: 15px;
+	cursor: pointer;
+	-webkit-transition: .3s;
+	transition: .3s;
+	z-index: 10001;
+}
+
+.menu-button .bar {
+	position: relative;
+	display: block;
+	width: 34px;
+	height: 5px;
+	margin: 5px auto;
+	background-color: #333;
+	border-radius: 10px;
+	-webkit-transition: .3s;
+	transition: .3s;
+}
+
+.menu-button .bar:nth-of-type(1) {
+	margin-top: 0px;
+}
+
+.menu-button .bar:nth-of-type(3) {
+	margin-bottom: 0px;
+}
+
+.menu-button.cross .bar:nth-of-type(1) {
+	-webkit-transform: translateY(10px) rotate(-45deg);
+	-ms-transform: translateY(10px) rotate(-45deg);
+	transform: translateY(10px) rotate(-45deg);
+}
+
+.menu-button.cross .bar:nth-of-type(2) {
+	opacity: 0;
+}
+
+.menu-button.cross .bar:nth-of-type(3) {
+	-webkit-transform: translateY(-10px) rotate(45deg);
+	-ms-transform: translateY(-10px) rotate(45deg);
+	transform: translateY(-10px) rotate(45deg);
+}
+
+
 
 /*
 	Header
@@ -2244,7 +2294,7 @@ footer {
 }//end .cont-box
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:720px) {
 	/* show-hide */
 	.mb-show {
 		display: block !important;
@@ -2252,4 +2302,291 @@ footer {
 	.mb-hide {
 		display: none !important;
 	}
+
+	#wrap {
+		margin-top: 130px;
+	}
+	.menu-button {
+		display: block;
+	}
+	header {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		background-color: #fff;
+		z-index: 9999;
+		.nav-top {
+			position: absolute;
+			top: 100%;
+			right: -100%;
+			width: 720px;
+			.inner {
+				.nav-sns {
+					display: none;
+				}
+				.nav-login {
+					padding:20px;
+					a {
+						font-size: 24px;
+					}
+				}
+			}
+		}
+		.nav-middle {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 130px;
+			.logo {
+				margin:0 0 0 20px;
+			}
+			.bnnr,
+			.center-tel {
+				display: none;
+			}
+		}
+		.nav-bottom {
+			position: absolute;
+			top: 100%;
+		}
+	}
+
+	#main-bnnr {
+		overflow: hidden;
+		.swiper-slide {
+			.inner {
+				.text {
+					width: 100%;
+				}
+			}
+		}
+		.swiper-pagination {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			top: auto;
+			bottom: 30px;
+			left: 0;
+			width: 100%;
+			.swiper-pagination-bullet {
+				width: 20px;
+				height: 20px;
+				margin: 0 10px;
+			}
+			.swiper-pagination-bullet-active {
+				width: 20px;
+				height: 20px;
+			}
+		}
+	}
+
+	#fast-menu-box {
+		.inner {
+			flex-wrap: wrap;
+			align-items: center;
+		}
+		.fast-menu {
+			width: 100%;
+			a {
+				padding:30px 0;
+				p {
+					font-size: 24px;
+				}
+			}
+		}
+		.fast-center-tel {
+			width: 100%;
+			.info {
+				display: flex;
+				align-items: center;
+				small {
+					font-size: 20px;
+				}
+				p {
+					font-size: 45px;
+				}
+				table {
+					margin-top: 0;
+					margin-left: 26px;
+					td {
+						font-size: 24px;
+					}
+				}
+			}
+		}
+	}
+
+	#main-middle-slide {
+		flex-wrap: wrap;
+		.box {
+			width: 100%;
+			&.left {
+				margin-bottom: 0;
+				.text {
+					padding:80px 100px 160px;
+					position: static;
+					width: 100%;
+					box-sizing: border-box;
+					transform: translate(0);
+					small {
+						font-size: 25px;
+					}
+					p {
+						font-size: 135px;
+					}
+					span {
+						font-size: 30px;
+					}
+				}
+				.swiper-pagination {
+					bottom: 80px;
+					font-size: 30px;
+				}
+			}
+			&.right {
+				margin-top: -80px;
+			}
+		}
+		.swiper-button-next,
+		.swiper-button-prev {
+			top: 460px;
+			margin-top: 0;
+		}
+		.swiper-button-next {
+			left: auto;
+			right: 0;
+		}
+		.swiper-button-prev {
+			right: 80px;
+		}
+
+		.swiper-slide {
+			> img {
+				margin:0 auto;
+			}
+		}
+	}
+
+	#main-doctor {
+		.title {
+			margin-bottom: 30px;
+			small,
+			h3,
+			p {
+				display: none;
+			}
+			> img {
+				max-width: 100%;
+				margin:0 auto;
+			}
+		}
+		.doctor-box {
+			.doctor {
+				position: static;
+				.img {
+					display: none;
+				}
+				.text {
+					margin-top: -30px;
+					padding:70px 0;
+					background-color: #f6f6f6;
+					p {
+						display: none;
+					}
+					> img {
+						margin:0 auto;
+					}
+				}
+			}
+			> img {
+				display: none;
+			}
+			.bg {
+				display: none;
+			}
+		}
+	}
+	#info {
+		margin-top: 0;
+		.inner {
+			flex-wrap: wrap;
+			padding:0;
+			.box {
+				width: 100%;
+				padding:80px 40px;
+				&.center {
+					select,
+					input:not([type="checkbox"]) {
+						height: 80px;
+						font-size: 24px;
+					}
+					label {
+						font-size: 22px;
+						input {
+							width: 22px;
+							height: 22px;
+						}
+					}
+					p {
+						font-size: 21px;
+						letter-spacing: -1.8px;
+					}
+				}
+				&.right {
+					h3 {
+						text-align: center;
+					}
+					p {
+						margin-top: 0;
+						font-size: 86px;
+						text-align: center;
+					}
+					.table-box {
+						display: flex;
+						align-items: center;
+						padding:60px 38px;
+						> img {
+							margin-right: 38px;
+						}
+						table {
+							tbody {
+								td {
+									padding:5px 0;
+									font-size: 28px;
+									letter-spacing: -1.5px;
+									&:first-of-type {
+										width: 120px;
+									}
+								}
+							}
+							tfoot {
+								td {
+									padding-top: 20px;
+									font-size: 28px;
+								}
+							}
+						}
+					}
+				}
+				h3 {
+					font-size: 45px;
+				}
+				a {
+					height: 80px;
+					font-size: 28px;
+					line-height: 80px;
+				}
+			}
+		}
+	}
+
+	#bottom-bnnr {
+		margin-top: 0;
+		.img {
+			display: none;
+		}
+	}
 }
+
+
