모바일 업로드

--- a/www/resource/css/board.css
+++ b/www/resource/css/board.css
@@ -703,8 +703,8 @@
 
 .pagination .btn.current {
 	color: #fff !important;
-	border-color: #f19d9d;
-	background-color: #f19d9d;
+	border-color: #2f65bd;
+	background-color: #2f65bd;
 	cursor: default;
 }
 
